# momentum-dioxus

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  run.sh
assets/: dx-components-theme.css  tailwind.css
assets/data/: finances.json
assets/data/goals/: goals.json
assets/data/health/: health.json  history.json
assets/data/jaxbrain/: overview.json
assets/data/jaxbrain/blacksLaw/: ninthEd.json
src/: assets.rs  main.rs
src/components/: mod.rs
src/components/accordion/: style.css
src/components/fin_calc/: component.rs
src/components/fin_calc/goals/: component.rs
src/components/goals/: component.rs  style.css
src/components/graph_generator/: component.rs
src/components/health/: component.rs
src/components/jax_brain/: component.rs
src/components/time/: component.rs  mod.rs  model.rs  storage.rs  store.rs  style.css  view.rs
src/models/: mod.rs
src/models/finCalc/: finances.rs  mod.rs  tranche.rs
src/models/goals/: goals.rs
src/models/health/: equations.rs  health.rs  mod.rs
src/models/jaxBrain/: jaxbrain.rs  mod.rs  node.rs
src/models/jaxBrain/templates/: dictionary.rs
src/utils/: json_store.rs
src/views/: fincalc.rs  goals.rs  health.rs  jax_brain.rs  mod.rs  navbar.rs  overview.rs  time.rs
