[package]
name = "momentum-dioxus"
version = "0.1.0"
authors = ["wgauss <WesleyGauss.Dev@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-charts = "0.3.1"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, features = ["router"] }
reqwest = "0.13.1"
serde = {version = "1.0.228" , features = ["derive"] }
serde_json = "1.0.145"
strum = {version = "0.27.2" , features = ["derive"]}
time = { version = "0.3.44", features = ["serde", "macros" , "parsing", "formatting"] }
tokio = "1.48.0"
uuid = { version = "1.19", features = ["v4", "serde"] }
directories = "6"
futures-timer = "3"
chrono = "0.4.42"

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
